fix(huron): PROVISION-3657 Number not showing on Customer Portal
- Add refreshFn binding to pstnWizard and pstnReview.controller so after
successful order/import of numbers, lineListCtrl getLineList function
is called to refresh the Customer Portal lineList
- Fix styling issue so Customer Portal lineList actions column dropdown
menu overflow is visible
- Fix minor issue in pstnWizard Review screen under Private Enterprise
Trunking toggle
- Fix Partner Portal customer side panel overview number count not being
refreshed after number deletion. Also remove obsolete unit test

--- a/app/modules/huron/lines/_line-list.scss
+++ b/app/modules/huron/lines/_line-list.scss
@@ -58,8 +58,13 @@
   font-size: $h5-font-size;
 }
 
-#deleteExternalNumberOption {
+.actions {
   span {
     color: $color-alerts-base;
   }
+}
+
+.dropdown-menu.dropdown-primary {
+  overflow: visible;
+  position: absolute;
 }
